# RenderLib

./: .gitignore  .gitmodules  CMakeLists.txt  README.txt
include/: renderLib.h  renderlib.h
include/dataStructs/bvh/: bvh.h
include/dataStructs/kdtree/: kdTree.h  kdTree.inl
include/dataStructs/photonMap/: photonMap.h  photonMapKNN.h
include/geometry/: utils.h
include/geometry/bounds/: boundingBox.h  bounds2D.h
include/geometry/intersection/: intersection.h
include/geometry/tessellation/delaunay/: delaunay2D.h  delaunay3D.h
include/geometry/topology/: halfedge.h
include/math/: constants.h  numeric.h
include/math/algebra/matrix/: matrix3.h  matrix3.inl  matrix4.h  matrix4.inl  matrix5.h
include/math/algebra/normal/: normal2.h  normal2.inl  normal3.h  normal3.inl
include/math/algebra/point/: point2.h  point2.inl  point3.h  point3.inl
include/math/algebra/quaternion/: quaternion.h  quaternion.inl
include/math/algebra/vector/: vector2.h  vector2.inl  vector3.h  vector3.inl
include/math/sampling/: lowDiscrepancy.h  random.h
include/raytracing/primitives/: sphere.h
include/raytracing/ray/: ray.h
source/: renderlib.h
source/dataStructs/bvh/: bvh.cpp
source/dataStructs/kdtree/: kdTree.cpp  kdTree.h  kdTree.inl
source/dataStructs/photonMap/: photonMap.cpp  photonMap.h  photonMapKNN.h  photonMapSamplesPool.h
source/dataStructs/triangleSoup/: triangleSoup.h
source/geometry/bounds/: boundingBox.cpp  boundingBox.h  bounds2D.cpp
source/geometry/intersection/: intersection.cpp  intersection.h
source/geometry/tesellation/delaunay/: delaunay2D.cpp  delaunay3D.cpp
source/geometry/topology/: halfedge.cpp
source/math/algebra/matrix/: matrix3.h  matrix4.h  matrix4.inl  matrix5.h  matrix5.inl
source/math/algebra/normal/: normal3.h
source/math/algebra/point/: point2.h  point2.inl  point3.h  point3.inl
source/math/algebra/quaternion/: quaternion.cpp
source/math/algebra/vector/: vector2.h  vector2.inl  vector3.h  vector3.inl
source/math/sampling/: lowDiscrepancy.cpp  random.cpp
source/raytracing/primitives/: sphere.cpp
source/raytracing/ray/: ray.h
vs2010/: RenderLib.sln  RenderLib.vcxproj  buildPaths.props  copyHeaders.props  includePaths.props
